--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+/target/
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
+.project
+.classpath
+.settings
+*/logs/
 *.class
 
 # Mobile Tools for Java (J2ME)
