修改v2ex-webclient为v2ex-web

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>v2ex-data</module>
-		<module>v2ex-webclient</module>
+		<module>v2ex-web</module>
 	</modules>
 	<properties>
 		<java.version>1.8</java.version>
