添加POM dependency支持，添加基本页面，使用beetl管理，保证首页可以访问

--- a/v2ex-web/src/main/resources/config/beetl/beetl.properties
+++ b/v2ex-web/src/main/resources/config/beetl/beetl.properties
@@ -4,8 +4,8 @@ ENGINE=org.beetl.core.engine.FastRuntimeEngine
 DELIMITER_PLACEHOLDER_START=${
 DELIMITER_PLACEHOLDER_END=}
 #指定了语句的定界符号，默认是<% %>,也可以指定为其他定界符号
-DELIMITER_STATEMENT_START=@
-DELIMITER_STATEMENT_END=null
+DELIMITER_STATEMENT_START=<%
+DELIMITER_STATEMENT_END=%>
 #指定IO输出模式，默认是FALSE,即通常的字符输出，再考虑高性能情况下，可以设置成true
 DIRECT_BYTE_OUTPUT = FALSE
 #指定了支持HTML标签，且符号为#（只能用一个符号标示），默认配置下，模板引擎识别<#tag ></#tag>
