--- a/v2ex-web/pom.xml
+++ b/v2ex-web/pom.xml
@@ -121,6 +121,10 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.octo.captcha</groupId>
+			<artifactId>jcaptcha-all</artifactId>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
