--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.generalthink.v2ex</groupId>
-	<artifactId>fack_v2ex</artifactId>
+	<groupId>com.generalthink</groupId>
+	<artifactId>v2ex</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
@@ -63,7 +63,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>com.generalthink</groupId>
-				<artifactId>v2ex-common</artifactId>
+				<artifactId>v2ex-data</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
