--- a/v2ex-data/pom.xml
+++ b/v2ex-data/pom.xml
@@ -4,8 +4,8 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.generalthink.v2ex</groupId>
-		<artifactId>fack_v2ex</artifactId>
+		<groupId>com.generalthink</groupId>
+		<artifactId>v2ex</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>v2ex-data</artifactId>
