--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		<maven-source-plugin.version>2.4</maven-source-plugin.version>
 		<maven-war-plugin.version>2.6</maven-war-plugin.version>
 		<maven-tomcat7-plugin.version>2.1</maven-tomcat7-plugin.version>
+		<maven-war-plugin.version>2.6</maven-war-plugin.version>
 		<versions-maven-plugin.version>2.2</versions-maven-plugin.version>
 	</properties>
 	<dependencyManagement>
@@ -294,6 +295,11 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>${maven-tomcat7-plugin.version}</version>
 				</plugin>
+				 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven-war-plugin.version}</version>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
