--- a/v2ex-web/src/main/webapp/WEB-INF/web.xml
+++ b/v2ex-web/src/main/webapp/WEB-INF/web.xml
@@ -50,4 +50,8 @@
     <session-timeout>30</session-timeout>
     <tracking-mode>COOKIE</tracking-mode>
   </session-config>
+ <!--  <error-page>
+  	<exception-type>java.lang.RuntimeException</exception-type>
+  	<location>/error/404</location>
+  </error-page> -->
 </web-app>
