--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
 		<!-- mybatis -->
 		<mybatis.version>3.4.2</mybatis.version>
 		<mybatis-spring.version>1.3.1</mybatis-spring.version>
-		<pagehelper.version>3.6.4</pagehelper.version>
 		<!-- json -->
 		<jackson.version>2.8.7</jackson.version>
 		<!-- shiro -->
@@ -40,6 +39,8 @@
 		<commons-collections4.version>4.1</commons-collections4.version>
 		<commons-logging.version>1.2</commons-logging.version>
 		<jcaptcha.version>1.0-RC6</jcaptcha.version>
+		<dozer.version>6.0.0</dozer.version>
+		<pagehelper.version>5.0.4</pagehelper.version>
 		<!-- log -->
 		<slf4j.version>1.7.24</slf4j.version>
 		<jcl-over-slf4j.version>1.7.24</jcl-over-slf4j.version>
@@ -208,6 +209,12 @@
 				</exclusions>
 			</dependency>
 
+			<dependency>
+				<groupId>com.github.dozermapper</groupId>
+				<artifactId>dozer-core</artifactId>
+				<version>${dozer.version}</version>
+			</dependency>
+
 			<!-- google表达式引擎 -->
 			<dependency>
 				<groupId>com.googlecode.aviator</groupId>
@@ -295,11 +302,11 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>${maven-tomcat7-plugin.version}</version>
 				</plugin>
-				 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>${maven-war-plugin.version}</version>
-                </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>${maven-war-plugin.version}</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
