--- a/v2ex-data/pom.xml
+++ b/v2ex-data/pom.xml
@@ -60,6 +60,10 @@
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
